--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "morgan": "~1.9.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "slack-node": "^0.1.8"
   }
 }
