--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "LeakDetector.js",
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test": "jest ./test"
+    "test": "jest --coverage ./test"
   },
   "repository": {
     "type": "git",
@@ -35,5 +35,8 @@
     "morgan": "~1.9.0",
     "request": "^2.87.0",
     "slack-node": "^0.1.8"
+  },
+  "jest": {
+    "coverageReporters": ["json-summary", "text-summary"]
   }
 }
